--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <a id="top"></a>
+    <p>Goto <a href="table.html">Table</a> <a href="media.html">Media</a></p>
 
     <h1>Welcome to My AltSchool Profile</h1>
     <p><strong>Full Name:</strong> Samuel Aleonomoh</p>
